update project name

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,14 +9,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
   <!--  TODO  -->
-  <title>TBD</title>
+  <title>MoneyThings</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Qiqi Chen, Ziqing Mao" />
   <!--  TODO  -->
   <meta
     name="description"
-    content="TBD"
+    content="MoneyThings is a single page application for personal finance management."
   />
   <meta
     name="keywords"
