--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -81,10 +81,11 @@
   />
 </head>
 
-<body style="padding: 0.5rem">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <!-- Bootstrap script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-  <div id="root"></div>
+  <div id="root" class="d-flex flex-column"
+       style="height: 100vh; width: 100vw; overflow: hidden"></div>
 </body>
 </html>
