--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,6 +41,7 @@
     />
 
     <!-- Font Awesome icons -->
+    <!-- are these icons free licensing? -->
     <script
       src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
       crossorigin="anonymous"
